--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-svg": "^9.13.4",
+    "svg-path-properties": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
